--- a/style.css
+++ b/style.css
@@ -186,6 +186,22 @@ header {
     right: 1.7rem;
     cursor: pointer;
   }
+  > .close_button {
+    cursor: pointer;
+    background-color: burlywood;
+    outline: none;
+    width: 2.3rem;
+    height: 2.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #3f0000;
+    border: 0;
+    border-radius: 50%;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+  }
 }
 
 #add_new_book {
