--- a/style.css
+++ b/style.css
@@ -181,11 +181,25 @@ header {
   gap: 0.7rem;
   position: relative;
   color: burlywood;
-  > button {
+  > .read_status {
     position: absolute;
     bottom: 1.7rem;
     right: 1.7rem;
     cursor: pointer;
+    background-color: burlywood;
+    outline: none;
+    width: fit-content;
+    height: 2.7rem;
+    padding: 0 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #3f0000;
+    border: 0;
+    border-radius: 0.7rem;
+    box-shadow: 0.3rem 0.3rem 10px black;
+    font-weight: bold;
+    letter-spacing: 0.1rem;
   }
   > .close_button, .edit_button {
     cursor: pointer;
