--- a/style.css
+++ b/style.css
@@ -77,7 +77,8 @@ header {
   overflow-y: auto;
 }
 
-#book_form_dialog, #edit_dialog {
+#book_form_dialog,
+#edit_dialog {
   /* display: block; */
   position: fixed;
   top: 50%;
@@ -88,7 +89,8 @@ header {
   box-shadow: 3px 3px 3px black;
 }
 
-#book_form, #edit_form {
+#book_form,
+#edit_form {
   font-family: Georgia, "Times New Roman", Times, serif;
   display: flex;
   flex-direction: column;
@@ -138,7 +140,8 @@ header {
     align-items: center;
     gap: 1rem;
   }
-  & #form_submit, #edit_submit {
+  & #form_submit,
+  #edit_submit {
     background-color: burlywood;
     color: #3f0000;
     border: 0;
@@ -206,7 +209,8 @@ header {
     font-weight: bold;
     letter-spacing: 0.1rem;
   }
-  > .close_button, .edit_button {
+  > .close_button,
+  .edit_button {
     cursor: pointer;
     background-color: burlywood;
     outline: none;
@@ -219,7 +223,7 @@ header {
     border: 0;
     border-radius: 50%;
     position: absolute;
-    right: 1.5rem;  
+    right: 1.5rem;
   }
   > .close_button {
     top: 1.5rem;
@@ -265,7 +269,7 @@ header {
   gap: 3rem;
   position: sticky;
   top: 10rem;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: bold;
   font-size: 1.8rem;
   color: burlywood;
@@ -275,4 +279,23 @@ header {
   }
   & input[type="number"] {
     width: 6rem;
+  }
+  & #reset_filters {
+    cursor: pointer;
+    background-color: burlywood;
+    outline: none;
+    width: 8.3rem;
+    height: 5.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #3f0000;
+    border: 0;
+    border-radius: 1.5rem;
+    font-size: 1.7rem;
+    padding: 1rem;
+    align-self: center;
+    font-weight: bold;
+    box-shadow: 2px 2px 10px black;
+  }
 }
