feat: first version FINISHED
- Filtering functionality isn't additive
- Author editions mess with author filter list features
- Several editions don't update the filtered view

--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ header {
   padding: 3rem;
   color: blanchedalmond;
   font-family: Georgia, "Times New Roman", Times, serif;
+  overflow: auto;
 }
 
 .book_list {
