--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 :root {
@@ -237,6 +240,9 @@ header {
       width: 1.9rem;
       > path {
         fill: #3f0000;
+        &:hover {
+          fill: burlywood;
+        }
       }
     }
   }
@@ -244,12 +250,12 @@ header {
 
 #add_new_book {
   background-color: #a67b5b;
+  color: burlywood;
   width: 7rem;
   height: 7rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: burlywood;
   font-size: 7.6rem;
   font-weight: bold;
   outline: none;
@@ -261,6 +267,10 @@ header {
   bottom: 3rem;
   left: -11rem;
   z-index: 2;
+  &:hover {
+    background-color: burlywood;
+    color: #a67b5b;
+  }
 }
 
 .controls {
@@ -303,3 +313,18 @@ header {
     box-shadow: 2px 2px 10px black;
   }
 }
+
+button {
+  transition: transform 0.18s ease;
+  &:not(#add_new_book):hover {
+    background-color: #3f0000;
+    color: burlywood;
+  }
+  &:active {
+    transform: scale(0.93); /* Scales down the button */
+    /* You can add other styles here if needed */
+  }
+}
+/* button:hover {
+  transform: scale(1.1);
+} */
