--- a/style.css
+++ b/style.css
@@ -79,15 +79,14 @@ header {
   position: relative;
   display: grid;
   padding: 3rem;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 25rem));
+  grid-auto-rows: 20rem;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 25rem));
   gap: 3rem;
   height: calc(100vh - 10rem);
   overflow-y: auto;
 }
 
 #book_form_dialog {
-  /* display: block;
-  z-index: 3; */
   position: fixed;
   top: 50%;
   left: 50%;
